tests/fixtures/valid/builtins/reversed_builtin.py
# reversed builtin
lst: list[int] = [1, 2, 3, 4, 5]
for x in reversed(lst):
    print(x)
