tests/fixtures/invalid/pow_list_bool_int.py
# Cannot call pow() with List[int], Bool, Int
x = pow([1, 2, 3], True, 1)
